tests/baselines/reference/asyncGenerators.classMethod.17.es5.errors.txt
tests/cases/conformance/asyncGenerators/es5/classMethods/asyncGenerators.classMethod.17.es5.ts(3,16): error TS2304: Cannot find name 'await'.


==== tests/cases/conformance/asyncGenerators/es5/classMethods/asyncGenerators.classMethod.17.es5.ts (1 errors) ====
    class C {
        async * f() {
            var x: await;
                   ~~~~~
!!! error TS2304: Cannot find name 'await'.
        }
    }